--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/darkGreen"
     android:gravity="center">
-    <ImageView
+    <ImageView android:id="@+id/logo"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:src="@mipmap/logo"/>
